[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://theme/Main.tres" type="Theme" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
scenes = PoolStringArray( "res://game/Game.tscn", "res://game/SingleGame.tscn", "res://game/MultiGame.tscn" )

[node name="Menu" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -111.5
margin_right = 117.0
margin_bottom = 111.5

[node name="Title" type="Label" parent="Menu/VBoxContainer"]
margin_right = 234.0
margin_bottom = 55.0
text = "A Simple Pong Game
Made w/Godot"
align = 1

[node name="BtnSingleGame" type="Button" parent="Menu/VBoxContainer"]
margin_top = 79.0
margin_right = 234.0
margin_bottom = 111.0
size_flags_vertical = 3
text = "Single Player"

[node name="BtnMultiGame" type="Button" parent="Menu/VBoxContainer"]
margin_top = 135.0
margin_right = 234.0
margin_bottom = 167.0
size_flags_vertical = 3
text = "Multiplayer"

[node name="BtnQuit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 191.0
margin_right = 234.0
margin_bottom = 223.0
size_flags_vertical = 3
text = "Quit"

[connection signal="button_up" from="Menu/VBoxContainer/BtnSingleGame" to="." method="_on_BtnSingleGame_button_up"]
[connection signal="button_up" from="Menu/VBoxContainer/BtnMultiGame" to="." method="_on_BtnMultiGame_button_up"]
[connection signal="button_up" from="Menu/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_button_up"]
